--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "commander": "^2.9.*",
     "cookie-parser": "1.4.*",
     "debug": "2.2.*",
-    "express": "4.*",
+    "express": ">4.5",
     "jade": "1.*",
     "lodash": "~3.10.*",
     "md5": "^2.0.0",
